# swarmkeeper

./: .gitignore  README.md
app/: Makefile  app-config
app/src/: swarmkeeper.c
client/: Cargo.toml
client/geometry/: Lighthouse_with_Loco.yaml
client/plans/: bitcraze_arena_lh4_and_loco.yaml
client/scenes/: bitcraze_areana_loco.yaml  bitcraze_arena_lh16.yaml  bitcraze_arena_lh4.yaml
client/src/: coverage.rs  lh_wizard.rs  main.rs  planning.rs  renderer.rs  tdoa3.rs
client/src/lh_geo/: bs_vector.rs  container.rs  crossing_beam.rs  estimation_manager.rs  geometry_solver.rs  initial_estimator.rs  ippe.rs  ippe_cf.rs  mod.rs  sample.rs  solution.rs  system_aligner.rs  system_scaler.rs  types.rs
client/swarms/: default.yaml
client/trajectories/: cube.yaml  figure8.yaml  square.yaml
client/ui/: app-window.slint  combined-coverage.slint  lh-coverage.slint  lh-wizard.slint  planning.slint  radio-test.slint  tdoa3-coverage.slint  unit-card.slint  units.slint  visualization.slint
firmware/swarmkeeper-app/src/: Kbuild
